# stm32f3-serial

./: Cargo.toml  README.md  openocd.gdb
auxiliary/: Cargo.toml
auxiliary/src/: lib.rs  monotimer.rs
src/: main.rs
