[package]
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f3-serial"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
stm32f3-discovery = { git = "https://github.com/nicolasbauw/stm32f3-discovery", branch = "master" }
panic-halt = "0.2.0"
aux11 = { path = "auxiliary" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f3-serial"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
