[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "aux11"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-itm = "0.4.2"
panic-semihosting = "0.6.0"
stm32f3-discovery = { git = "https://github.com/nicolasbauw/stm32f3-discovery", branch = "master" }

[features]
adapter = []
